updated name to cde-helper

--- a/src/public/styles/taskpane.css
+++ b/src/public/styles/taskpane.css
@@ -128,6 +128,7 @@ b {
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     z-index: 1;
+    width: 330px;
 }
 .footerbar {
     overflow: hidden;
